--- a/email-marketing.html
+++ b/email-marketing.html
@@ -725,7 +725,7 @@ html {
   <script src="../cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   <script src="../unpkg.com/aos%402.3.1/dist/aos.js"></script>
   <script src="../cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js" integrity="sha512-uURl+ZXMBrF4AwGaWmEetzrd+J5/8NRkWAvJx5sbPSSuOb0bZLqf+tOzniObO00BjHa/dD7gub9oCGMLPQHtQA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script async src="../app.webblers.co/js/main.js"></script>
+  <script async src="app.webblers.co/js/main.js"></script>
   <script src="assets/js/custom5059.js?v=20"></script>
   
 
