--- a/portfolio.html
+++ b/portfolio.html
@@ -2355,7 +2355,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script async src="../app.webblers.co/js/main.js"></script>
+    <script async src="app.webblers.co/js/main.js"></script>
     <script src="assets/js/custom5059.js?v=20"></script>
   </body>
 
