--- a/domain-hosting.html
+++ b/domain-hosting.html
@@ -1150,7 +1150,7 @@
   <script src="../cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"
     integrity="sha512-uURl+ZXMBrF4AwGaWmEetzrd+J5/8NRkWAvJx5sbPSSuOb0bZLqf+tOzniObO00BjHa/dD7gub9oCGMLPQHtQA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script async src="../app.webblers.co/js/main.js"></script>
+  <script async src="app.webblers.co/js/main.js"></script>
   <script src="assets/js/custom5059.js?v=20"></script>
 
 
