--- a/packages.html
+++ b/packages.html
@@ -1648,7 +1648,7 @@
   <script src="../cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"
     integrity="sha512-uURl+ZXMBrF4AwGaWmEetzrd+J5/8NRkWAvJx5sbPSSuOb0bZLqf+tOzniObO00BjHa/dD7gub9oCGMLPQHtQA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script async src="../app.webblers.co/js/main.js"></script>
+  <script async src="app.webblers.co/js/main.js"></script>
   <script src="assets/js/custom2dac.js?v=21"></script>
 
 
