--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -42,17 +42,17 @@
         j.async = true;
         j.src = "../www.googletagmanager.com/gtm5445.html?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-WX5MM6JJ");
+      })(window, document, "script", "dataLayer", "");
     </script>
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="google-site-verification"
-      content="mxxGF36UZHhTWghqr4-SKQJBz84v-IYnfdTR0IFdd50"
+      content=""
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link href="../unpkg.com/aos%402.3.1/dist/aos.css" rel="stylesheet" />
+    <link href="unpkg.com/aos%402.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
@@ -64,11 +64,11 @@
     />
     <link
       rel="stylesheet"
-      href="../cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+      href="cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
     />
     <link
       rel="stylesheet"
-      href="../cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css"
+      href="cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css"
       integrity="sha512-nNlU0WK2QfKsuEmdcTwkeh+lhGs6uyOxuUs+n+0oXSYDok5qy0EI0lt01ZynHq6+p/tbgpZ7P+yUb+r71wqdXg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
@@ -80,7 +80,7 @@
     <link rel="stylesheet" href="assets/css/layout30f4.css?v=3" />
     <script
       type="text/javascript"
-      src="../cdn.callrail.com/companies/729958483/71d030fded9e55964e2a/12/swap.js"
+      src="cdn.callrail.com/companies/729958483/71d030fded9e55964e2a/12/swap.js"
     ></script>
     <style>
       html {
@@ -90,7 +90,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-FMLNXDWJNH"
+      src=""
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -99,7 +99,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-FMLNXDWJNH");
+      gtag("config", "");
     </script>
   </head>
 
@@ -2221,10 +2221,10 @@
     <!-- package model  -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="../cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-    <script src="../unpkg.com/aos%402.3.1/dist/aos.js"></script>
+    <script src="cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script src="unpkg.com/aos%402.3.1/dist/aos.js"></script>
     <script
-      src="../cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"
+      src="cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"
       integrity="sha512-uURl+ZXMBrF4AwGaWmEetzrd+J5/8NRkWAvJx5sbPSSuOb0bZLqf+tOzniObO00BjHa/dD7gub9oCGMLPQHtQA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
