--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="google-site-verification" content="" />
-    <link href="../unpkg.com/aos%402.3.1/dist/aos.css" rel="stylesheet" />
+    <link href="unpkg.com/aos%402.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
@@ -78,11 +78,11 @@
     />
     <link
       rel="stylesheet"
-      href="../cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+      href="cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
     />
     <link
       rel="stylesheet"
-      href="../cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css"
+      href="cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css"
       integrity="sha512-nNlU0WK2QfKsuEmdcTwkeh+lhGs6uyOxuUs+n+0oXSYDok5qy0EI0lt01ZynHq6+p/tbgpZ7P+yUb+r71wqdXg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
@@ -94,7 +94,7 @@
     <link rel="stylesheet" href="assets/css/layout30f4.css?v=3" />
     <script
       type="text/javascript"
-      src="../cdn.callrail.com/companies/729958483/71d030fded9e55964e2a/12/swap.js"
+      src="cdn.callrail.com/companies/729958483/71d030fded9e55964e2a/12/swap.js"
     ></script>
     <style>
       html {
@@ -110,7 +110,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-FMLNXDWJNH");
+      gtag("config", "");
     </script>
   </head>
 
@@ -6383,10 +6383,10 @@
     ></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="../cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-    <script src="../unpkg.com/aos%402.3.1/dist/aos.js"></script>
+    <script src="cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script src="unpkg.com/aos%402.3.1/dist/aos.js"></script>
     <script
-      src="../cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"
+      src="cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"
       integrity="sha512-uURl+ZXMBrF4AwGaWmEetzrd+J5/8NRkWAvJx5sbPSSuOb0bZLqf+tOzniObO00BjHa/dD7gub9oCGMLPQHtQA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
