--- a/packages.html
+++ b/packages.html
@@ -47,7 +47,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="google-site-verification" content="" />
   <title>Packages - Red Stone Design Master</title>
-  <link href="../unpkg.com/aos%402.3.1/dist/aos.css" rel="stylesheet">
+  <link href="unpkg.com/aos%402.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com/">
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
@@ -56,15 +56,15 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Archivo+Black&amp;family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="../cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-  <link rel="stylesheet" href="../cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css"
+  <link rel="stylesheet" href="cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
+  <link rel="stylesheet" href="cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css"
     integrity="sha512-nNlU0WK2QfKsuEmdcTwkeh+lhGs6uyOxuUs+n+0oXSYDok5qy0EI0lt01ZynHq6+p/tbgpZ7P+yUb+r71wqdXg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="assets/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/framework.css">
   <link rel="stylesheet" href="assets/css/style3860.css?v=1">
   <link rel="stylesheet" href="assets/css/layout30f4.css?v=3">
-  <script type="text/javascript" src="../cdn.callrail.com/companies/729958483/71d030fded9e55964e2a/12/swap.js"></script>
+  <script type="text/javascript" src="cdn.callrail.com/companies/729958483/71d030fded9e55964e2a/12/swap.js"></script>
   <style>
     header.packages-header {
 
@@ -1643,9 +1643,9 @@
   <!-- package model  -->
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
-  <script src="../cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-  <script src="../unpkg.com/aos%402.3.1/dist/aos.js"></script>
-  <script src="../cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"
+  <script src="cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+  <script src="unpkg.com/aos%402.3.1/dist/aos.js"></script>
+  <script src="cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"
     integrity="sha512-uURl+ZXMBrF4AwGaWmEetzrd+J5/8NRkWAvJx5sbPSSuOb0bZLqf+tOzniObO00BjHa/dD7gub9oCGMLPQHtQA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script async src="app.webblers.co/js/main.js"></script>
