--- a/domain-hosting.html
+++ b/domain-hosting.html
@@ -10,7 +10,7 @@
   <script type="text/javascript">
     (function () {
       window._insp = window._insp || [];
-      __insp.push(['wid', 1199737316]);
+      __insp.push(['wid', ]);
       var ldinsp = function () {
         if (typeof window._inspld != "undefined") return;
         window._inspld = 1;
@@ -19,7 +19,7 @@
         insp.async = true;
         insp.id = "inspsync";
         insp.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-          '://cdn.inspectlet.com/inspectlet.js?wid=1199737316&r=' + Math.floor(new Date().getTime() / 3600000);
+          '' + Math.floor(new Date().getTime() / 3600000);
         var x = document.getElementsByTagName('script')[0];
         x.parentNode.insertBefore(insp, x);
       };
