--- a/search-engine-optimization.html
+++ b/search-engine-optimization.html
@@ -22,7 +22,7 @@
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  '../www.googletagmanager.com/gtm5445.html?id='+i+dl;f.parentNode.insertBefore(j,f);
+  '../www.googletagmanager.com/gtm5445?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','');</script>
   <!-- End Google Tag Manager -->
   <meta charset="UTF-8">
@@ -73,7 +73,7 @@ html {
   <header class="an-header">
     <nav class="navbar navbar-expand-xl navbar-light ">
       <div class="container">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/">
           <img src="assets/img/logo.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -84,30 +84,30 @@ html {
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav m-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="website-development-services.html">Website Development</a>
+              <a class="nav-link" href="website-development-services">Website Development</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="website-hosting.html">Web Hosting</a>
+              <a class="nav-link" href="website-hosting">Web Hosting</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="digital-marketing.html"  aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="digital-marketing"  aria-expanded="false">
                 Digital Marketing
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="search-engine-optimization.html">SEO Marketing</a>
-                <a class="dropdown-item" href="social-media-marketing.html">Social Media Marketing</a>
+                <a class="dropdown-item" href="search-engine-optimization">SEO Marketing</a>
+                <a class="dropdown-item" href="social-media-marketing">Social Media Marketing</a>
                
               </div>
             </li>
            
             <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio </a>
+              <a class="nav-link" href="portfolio">Portfolio </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="packages.html">Packages</a>
+              <a class="nav-link" href="packages">Packages</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact-us.html">Contact us</a>
+              <a class="nav-link" href="contact-us">Contact us</a>
             </li>
           </ul>
           <a class="an-primary-btn dark" href="javascript:;" data-toggle="modal" data-target="#package_popup">Hire an
@@ -279,7 +279,7 @@ html {
           </div>
           <div class="col-lg-12">
             <div class="text-center pt-3 ">
-              <a href="packages.html" class="an-primary-btn outline">VIEW PACKAGES <img src="assets/img/btn-arrow.webp" alt=""></a>
+              <a href="packages" class="an-primary-btn outline">VIEW PACKAGES <img src="assets/img/btn-arrow.webp" alt=""></a>
             </div>
           </div>
       </div>
@@ -427,7 +427,7 @@ html {
       </div>
     </div>
     <div class="text-center">
-      <a href="portfolio.html" class="an-primary-btn outline">MORE Project <img src="assets/img/btn-arrow.webp" alt=""></a>
+      <a href="portfolio" class="an-primary-btn outline">MORE Project <img src="assets/img/btn-arrow.webp" alt=""></a>
     </div>
   </section>
   <section class="mf-section-three" id="pricing">
@@ -745,11 +745,11 @@ html {
            <div class="quicklinks-footer">
               <h6>SERVICES</h6>
               <ul class="list-unstyled">
-                 <li><a href="website-development-services.html">Website Development</a></li>
-                 <li><a href="website-hosting.html">Web Hosting</a></li>
-                 <li><a href="domain-hosting.html">GET A FREE DOMAIN</a></li>
-                 <li><a href="ssl.html">SSL</a></li>
-                 <li><a href="email-marketing.html">Emails Marketing</a></li>
+                 <li><a href="website-development-services">Website Development</a></li>
+                 <li><a href="website-hosting">Web Hosting</a></li>
+                 <li><a href="domain-hosting">GET A FREE DOMAIN</a></li>
+                 <li><a href="ssl">SSL</a></li>
+                 <li><a href="email-marketing">Emails Marketing</a></li>
               </ul>
            </div>
         </div>
@@ -757,11 +757,11 @@ html {
            <div class="quicklinks-footer">
               <h6>QUICKS LINKS</h6>
               <ul class="list-unstyled">
-                 <li><a href="search-engine-optimization.html">SEO Marketing</a></li>
-                 <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
-                 <li><a href="contact-us.html">Contact us</a></li>
-                 <li><a href="terms-and-condition.html">Terms & Conditions</a></li>
-                 <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                 <li><a href="search-engine-optimization">SEO Marketing</a></li>
+                 <li><a href="social-media-marketing">Social Media Marketing</a></li>
+                 <li><a href="contact-us">Contact us</a></li>
+                 <li><a href="terms-and-condition">Terms & Conditions</a></li>
+                 <li><a href="privacy-policy">Privacy Policy</a></li>
               </ul>
            </div>
         </div>
