--- a/website-hosting.html
+++ b/website-hosting.html
@@ -5,7 +5,7 @@
     <script type="text/javascript">
       (function () {
         window._insp = window._insp || [];
-        __insp.push(["wid", ]);
+        __insp.push(["wid"]);
         var ldinsp = function () {
           if (typeof window._inspld != "undefined") return;
           window._inspld = 1;
@@ -33,7 +33,7 @@
           j = d.createElement(s),
           dl = l != "dataLayer" ? "&l=" + l : "";
         j.async = true;
-        j.src = "../www.googletagmanager.com/gtm5445.html?id=" + i + dl;
+        j.src = "../www.googletagmanager.com/gtm5445?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "");
     </script>
@@ -88,10 +88,7 @@
       }
     </style>
     <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src=""
-    ></script>
+    <script async src=""></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -120,7 +117,7 @@
     <header class="an-header">
       <nav class="navbar navbar-expand-xl navbar-light">
         <div class="container">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="/">
             <img src="assets/img/logo.png" alt="" />
           </a>
           <button
@@ -138,41 +135,39 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav m-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="website-development-services.html"
+                <a class="nav-link" href="website-development-services"
                   >Website Development</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="website-hosting.html">Web Hosting</a>
+                <a class="nav-link" href="website-hosting">Web Hosting</a>
               </li>
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
-                  href="digital-marketing.html"
+                  href="digital-marketing"
                   aria-expanded="false"
                 >
                   Digital Marketing
                 </a>
                 <div class="dropdown-menu">
-                  <a
-                    class="dropdown-item"
-                    href="search-engine-optimization.html"
+                  <a class="dropdown-item" href="search-engine-optimization"
                     >SEO Marketing</a
                   >
-                  <a class="dropdown-item" href="social-media-marketing.html"
+                  <a class="dropdown-item" href="social-media-marketing"
                     >Social Media Marketing</a
                   >
                 </div>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio </a>
+                <a class="nav-link" href="portfolio">Portfolio </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="packages.html">Packages</a>
+                <a class="nav-link" href="packages">Packages</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact-us.html">Contact us</a>
+                <a class="nav-link" href="contact-us">Contact us</a>
               </li>
             </ul>
             <a
@@ -304,7 +299,7 @@
             </div>
             <div class="col-12">
               <div class="text-center pt-3">
-                <a href="domain-hosting.html" class="an-primary-btn outline"
+                <a href="domain-hosting" class="an-primary-btn outline"
                   >READ MORE
                 </a>
               </div>
@@ -446,7 +441,7 @@
             </div>
             <div class="col-lg-12">
               <div class="text-center pt-3">
-                <a href="packages.html" class="an-primary-btn outline"
+                <a href="packages" class="an-primary-btn outline"
                   >VIEW PACKAGES <img src="assets/img/btn-arrow.png" alt=""
                 /></a>
               </div>
@@ -685,7 +680,7 @@
           </div>
         </div>
         <div class="text-center">
-          <a href="portfolio.html" class="an-primary-btn outline"
+          <a href="portfolio" class="an-primary-btn outline"
             >MORE Project <img src="assets/img/btn-arrow.png" alt=""
           /></a>
         </div>
@@ -1818,14 +1813,12 @@
               <h6>SERVICES</h6>
               <ul class="list-unstyled">
                 <li>
-                  <a href="website-development-services.html"
-                    >Website Development</a
-                  >
+                  <a href="website-development-services">Website Development</a>
                 </li>
-                <li><a href="website-hosting.html">Web Hosting</a></li>
-                <li><a href="domain-hosting.html">GET A FREE DOMAIN</a></li>
-                <li><a href="ssl.html">SSL</a></li>
-                <li><a href="email-marketing.html">Emails Marketing</a></li>
+                <li><a href="website-hosting">Web Hosting</a></li>
+                <li><a href="domain-hosting">GET A FREE DOMAIN</a></li>
+                <li><a href="ssl">SSL</a></li>
+                <li><a href="email-marketing">Emails Marketing</a></li>
               </ul>
             </div>
           </div>
@@ -1834,18 +1827,16 @@
               <h6>QUICKS LINKS</h6>
               <ul class="list-unstyled">
                 <li>
-                  <a href="search-engine-optimization.html">SEO Marketing</a>
+                  <a href="search-engine-optimization">SEO Marketing</a>
                 </li>
                 <li>
-                  <a href="social-media-marketing.html"
-                    >Social Media Marketing</a
-                  >
+                  <a href="social-media-marketing">Social Media Marketing</a>
                 </li>
-                <li><a href="contact-us.html">Contact us</a></li>
+                <li><a href="contact-us">Contact us</a></li>
                 <li>
-                  <a href="terms-and-condition.html">Terms & Conditions</a>
+                  <a href="terms-and-condition">Terms & Conditions</a>
                 </li>
-                <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                <li><a href="privacy-policy">Privacy Policy</a></li>
               </ul>
             </div>
           </div>
