--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -12,7 +12,7 @@
     <script type="text/javascript">
       (function () {
         window._insp = window._insp || [];
-        __insp.push(["wid", ]);
+        __insp.push(["wid"]);
         var ldinsp = function () {
           if (typeof window._inspld != "undefined") return;
           window._inspld = 1;
@@ -40,17 +40,14 @@
           j = d.createElement(s),
           dl = l != "dataLayer" ? "&l=" + l : "";
         j.async = true;
-        j.src = "../www.googletagmanager.com/gtm5445.html?id=" + i + dl;
+        j.src = "../www.googletagmanager.com/gtm5445?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "");
     </script>
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="google-site-verification"
-      content=""
-    />
+    <meta name="google-site-verification" content="" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="unpkg.com/aos%402.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -88,10 +85,7 @@
       }
     </style>
     <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src=""
-    ></script>
+    <script async src=""></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -107,7 +101,7 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-WX5MM6JJ"
+        src="https://www.googletagmanager.com/ns?id=GTM-WX5MM6JJ"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
@@ -120,7 +114,7 @@
     <header class="an-header">
       <nav class="navbar navbar-expand-xl navbar-light">
         <div class="container">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="/">
             <img src="assets/img/logo.png" alt="" />
           </a>
           <button
@@ -138,41 +132,39 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav m-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="website-development-services.html"
+                <a class="nav-link" href="website-development-services"
                   >Website Development</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="website-hosting.html">Web Hosting</a>
+                <a class="nav-link" href="website-hosting">Web Hosting</a>
               </li>
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
-                  href="digital-marketing.html"
+                  href="digital-marketing"
                   aria-expanded="false"
                 >
                   Digital Marketing
                 </a>
                 <div class="dropdown-menu">
-                  <a
-                    class="dropdown-item"
-                    href="search-engine-optimization.html"
+                  <a class="dropdown-item" href="search-engine-optimization"
                     >SEO Marketing</a
                   >
-                  <a class="dropdown-item" href="social-media-marketing.html"
+                  <a class="dropdown-item" href="social-media-marketing"
                     >Social Media Marketing</a
                   >
                 </div>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio </a>
+                <a class="nav-link" href="portfolio">Portfolio </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="packages.html">Packages</a>
+                <a class="nav-link" href="packages">Packages</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact-us.html">Contact us</a>
+                <a class="nav-link" href="contact-us">Contact us</a>
               </li>
             </ul>
             <a
@@ -431,7 +423,7 @@
                   digital marketing services through these simple yet elegant
                   processes.
                 </p>
-                <a href="packages.html" class="an-primary-btn outline"
+                <a href="packages" class="an-primary-btn outline"
                   >VIEW PACKAGES <img src="assets/img/btn-arrow.webp" alt=""
                 /></a>
               </div>
@@ -592,8 +584,8 @@
 
                 <p>
                   Want a set-it-and-forget-it service or looking for something
-                  you can dig your teeth into? Red Stone is the digital marketing
-                  company that offers the best of both worlds!
+                  you can dig your teeth into? Red Stone is the digital
+                  marketing company that offers the best of both worlds!
                 </p>
                 <!-- <a href="#" class="an-primary-btn outline">READ MORE</a> -->
               </div>
@@ -769,7 +761,7 @@
           </div>
         </div>
         <div class="text-center">
-          <a href="portfolio.html" class="an-primary-btn outline"
+          <a href="portfolio" class="an-primary-btn outline"
             >MORE Project <img src="assets/img/btn-arrow.webp" alt=""
           /></a>
         </div>
@@ -1958,14 +1950,12 @@
               <h6>SERVICES</h6>
               <ul class="list-unstyled">
                 <li>
-                  <a href="website-development-services.html"
-                    >Website Development</a
-                  >
+                  <a href="website-development-services">Website Development</a>
                 </li>
-                <li><a href="website-hosting.html">Web Hosting</a></li>
-                <li><a href="domain-hosting.html">GET A FREE DOMAIN</a></li>
-                <li><a href="ssl.html">SSL</a></li>
-                <li><a href="email-marketing.html">Emails Marketing</a></li>
+                <li><a href="website-hosting">Web Hosting</a></li>
+                <li><a href="domain-hosting">GET A FREE DOMAIN</a></li>
+                <li><a href="ssl">SSL</a></li>
+                <li><a href="email-marketing">Emails Marketing</a></li>
               </ul>
             </div>
           </div>
@@ -1974,18 +1964,16 @@
               <h6>QUICKS LINKS</h6>
               <ul class="list-unstyled">
                 <li>
-                  <a href="search-engine-optimization.html">SEO Marketing</a>
+                  <a href="search-engine-optimization">SEO Marketing</a>
                 </li>
                 <li>
-                  <a href="social-media-marketing.html"
-                    >Social Media Marketing</a
-                  >
+                  <a href="social-media-marketing">Social Media Marketing</a>
                 </li>
-                <li><a href="contact-us.html">Contact us</a></li>
+                <li><a href="contact-us">Contact us</a></li>
                 <li>
-                  <a href="terms-and-condition.html">Terms & Conditions</a>
+                  <a href="terms-and-condition">Terms & Conditions</a>
                 </li>
-                <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                <li><a href="privacy-policy">Privacy Policy</a></li>
               </ul>
             </div>
           </div>
@@ -2008,7 +1996,8 @@
                     </li>
                     <li>
                       <a href="javascript:;"
-                        >11956 Bernardo Plaza Drive, #356, San Diego, CA 92128.</a
+                        >11956 Bernardo Plaza Drive, #356, San Diego, CA
+                        92128.</a
                       >
                     </li>
                   </ul>
