--- a/domain-hosting.html
+++ b/domain-hosting.html
@@ -40,7 +40,7 @@
         dl = l != 'dataLayer' ? '&l=' + l : '';
       j.async = true;
       j.src =
-        '../www.googletagmanager.com/gtm5445.html?id=' + i + dl;
+        '../www.googletagmanager.com/gtm5445?id=' + i + dl;
       f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', '');
   </script>
@@ -89,7 +89,7 @@
 
 <body data-barba="wrapper" class="">
   <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WX5MM6JJ" height="0" width="0"
+  <noscript><iframe src="https://www.googletagmanager.com/ns?id=GTM-WX5MM6JJ" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <div class="page-change-animation">
@@ -98,7 +98,7 @@
   <header class="an-header">
     <nav class="navbar navbar-expand-xl navbar-light ">
       <div class="container">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/">
           <img src="assets/img/logo.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -109,30 +109,30 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav m-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="website-development-services.html">Website Development</a>
+              <a class="nav-link" href="website-development-services">Website Development</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="website-hosting.html">Web Hosting</a>
+              <a class="nav-link" href="website-hosting">Web Hosting</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="digital-marketing.html" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="digital-marketing" aria-expanded="false">
                 Digital Marketing
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="search-engine-optimization.html">SEO Marketing</a>
-                <a class="dropdown-item" href="social-media-marketing.html">Social Media Marketing</a>
+                <a class="dropdown-item" href="search-engine-optimization">SEO Marketing</a>
+                <a class="dropdown-item" href="social-media-marketing">Social Media Marketing</a>
 
               </div>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio </a>
+              <a class="nav-link" href="portfolio">Portfolio </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="packages.html">Packages</a>
+              <a class="nav-link" href="packages">Packages</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact-us.html">Contact us</a>
+              <a class="nav-link" href="contact-us">Contact us</a>
             </li>
           </ul>
           <a class="an-primary-btn dark" href="javascript:;" data-toggle="modal" data-target="#package_popup">Hire an
@@ -233,7 +233,7 @@
               Red Stone don't put an extra burden on domain names ! Which means that you can have access to a free domain
               name if you sign up for our web hosting service
             </p>
-            <a href="free-domain.html" class="an-primary-btn outline">READ MORE</a>
+            <a href="free-domain" class="an-primary-btn outline">READ MORE</a>
           </div>
 
           <div class="col-lg-5">
@@ -254,7 +254,7 @@
               SSL protects your customer data from being tracked or cracked by third party intervention. Get ultimate
               data encryption with Red Stone free of charge SSL certification.
             </p>
-            <a href="ssl.html" class="an-primary-btn outline">READ MORE</a>
+            <a href="ssl" class="an-primary-btn outline">READ MORE</a>
           </div>
         </div>
         <div class="row">
@@ -267,7 +267,7 @@
               Do you want to discover tailored web hosting solutions to suit your business needs? Red Stone comes with
               the most reliable, scalable, and secure hosting options for you.
             </p>
-            <a href="website-hosting.html" class="an-primary-btn outline">READ MORE</a>
+            <a href="website-hosting" class="an-primary-btn outline">READ MORE</a>
           </div>
 
           <div class="col-lg-5">
@@ -352,7 +352,7 @@
 
       </div>
       <div class="text-center">
-        <a href="packages.html" class="an-primary-btn outline">VIEW PACKAGES <img src="assets/img/btn-arrow.webp" alt=""></a>
+        <a href="packages" class="an-primary-btn outline">VIEW PACKAGES <img src="assets/img/btn-arrow.webp" alt=""></a>
       </div>
     </section>
     <section class="mf-domain-choose">
@@ -830,7 +830,7 @@
         </div>
       </div>
       <div class="text-center">
-        <a href="portfolio.html" class="an-primary-btn outline">MORE Project <img src="assets/img/btn-arrow.webp" alt=""></a>
+        <a href="portfolio" class="an-primary-btn outline">MORE Project <img src="assets/img/btn-arrow.webp" alt=""></a>
       </div>
     </section>
 
@@ -995,11 +995,11 @@
              <div class="quicklinks-footer">
                 <h6>SERVICES</h6>
                 <ul class="list-unstyled">
-                   <li><a href="website-development-services.html">Website Development</a></li>
-                   <li><a href="website-hosting.html">Web Hosting</a></li>
-                   <li><a href="domain-hosting.html">GET A FREE DOMAIN</a></li>
-                   <li><a href="ssl.html">SSL</a></li>
-                   <li><a href="email-marketing.html">Emails Marketing</a></li>
+                   <li><a href="website-development-services">Website Development</a></li>
+                   <li><a href="website-hosting">Web Hosting</a></li>
+                   <li><a href="domain-hosting">GET A FREE DOMAIN</a></li>
+                   <li><a href="ssl">SSL</a></li>
+                   <li><a href="email-marketing">Emails Marketing</a></li>
                 </ul>
              </div>
           </div>
@@ -1007,11 +1007,11 @@
              <div class="quicklinks-footer">
                 <h6>QUICKS LINKS</h6>
                 <ul class="list-unstyled">
-                   <li><a href="search-engine-optimization.html">SEO Marketing</a></li>
-                   <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
-                   <li><a href="contact-us.html">Contact us</a></li>
-                   <li><a href="terms-and-condition.html">Terms & Conditions</a></li>
-                   <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                   <li><a href="search-engine-optimization">SEO Marketing</a></li>
+                   <li><a href="social-media-marketing">Social Media Marketing</a></li>
+                   <li><a href="contact-us">Contact us</a></li>
+                   <li><a href="terms-and-condition">Terms & Conditions</a></li>
+                   <li><a href="privacy-policy">Privacy Policy</a></li>
                 </ul>
              </div>
           </div>
