--- a/portfolio.html
+++ b/portfolio.html
@@ -106,7 +106,7 @@
     <header class="an-header">
       <nav class="navbar navbar-expand-xl navbar-light">
         <div class="container">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="/">
             <img src="assets/img/logo.png" alt="" />
           </a>
           <button
@@ -124,17 +124,17 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav m-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="website-development-services.html"
+                <a class="nav-link" href="website-development-services"
                   >Website Development</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="website-hosting.html">Web Hosting</a>
+                <a class="nav-link" href="website-hosting">Web Hosting</a>
               </li>
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
-                  href="digital-marketing.html"
+                  href="digital-marketing"
                   aria-expanded="false"
                 >
                   Digital Marketing
@@ -142,23 +142,23 @@
                 <div class="dropdown-menu">
                   <a
                     class="dropdown-item"
-                    href="search-engine-optimization.html"
+                    href="search-engine-optimization"
                     >SEO Marketing</a
                   >
-                  <a class="dropdown-item" href="social-media-marketing.html"
+                  <a class="dropdown-item" href="social-media-marketing"
                     >Social Media Marketing</a
                   >
                 </div>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio </a>
+                <a class="nav-link" href="portfolio">Portfolio </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="packages.html">Packages</a>
+                <a class="nav-link" href="packages">Packages</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact-us.html">Contact us</a>
+                <a class="nav-link" href="contact-us">Contact us</a>
               </li>
             </ul>
             <a
@@ -1739,7 +1739,7 @@
           data-aos-delay="200"
           data-aos-duration="1000"
         >
-          <a href="packages.html" class="an-primary-btn dark"
+          <a href="packages" class="an-primary-btn dark"
             >View Packages <img src="assets/img/btn-arrow.webp" alt=""
           /></a>
           <a href="javascript:;" class="an-primary-btn outline open_chat_btn"
@@ -2081,14 +2081,14 @@
               <h6>SERVICES</h6>
               <ul class="list-unstyled">
                 <li>
-                  <a href="website-development-services.html"
+                  <a href="website-development-services"
                     >Website Development</a
                   >
                 </li>
-                <li><a href="website-hosting.html">Web Hosting</a></li>
-                <li><a href="domain-hosting.html">GET A FREE DOMAIN</a></li>
-                <li><a href="ssl.html">SSL</a></li>
-                <li><a href="email-marketing.html">Emails Marketing</a></li>
+                <li><a href="website-hosting">Web Hosting</a></li>
+                <li><a href="domain-hosting">GET A FREE DOMAIN</a></li>
+                <li><a href="ssl">SSL</a></li>
+                <li><a href="email-marketing">Emails Marketing</a></li>
               </ul>
             </div>
           </div>
@@ -2097,18 +2097,18 @@
               <h6>QUICKS LINKS</h6>
               <ul class="list-unstyled">
                 <li>
-                  <a href="search-engine-optimization.html">SEO Marketing</a>
+                  <a href="search-engine-optimization">SEO Marketing</a>
                 </li>
                 <li>
-                  <a href="social-media-marketing.html"
+                  <a href="social-media-marketing"
                     >Social Media Marketing</a
                   >
                 </li>
-                <li><a href="contact-us.html">Contact us</a></li>
+                <li><a href="contact-us">Contact us</a></li>
                 <li>
-                  <a href="terms-and-condition.html">Terms & Conditions</a>
+                  <a href="terms-and-condition">Terms & Conditions</a>
                 </li>
-                <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                <li><a href="privacy-policy">Privacy Policy</a></li>
               </ul>
             </div>
           </div>
