--- a/index.html
+++ b/index.html
@@ -132,7 +132,12 @@
       <nav class="navbar navbar-expand-xl navbar-light">
         <div class="container">
           <a class="navbar-brand" href="/">
-            <img src="assets/img/logo.png" alt="" />
+            <img
+              src="assets/img/logo.png"
+              alt="Red Stone Design Master"
+              width="100"
+              height="100"
+            />
           </a>
           <button
             class="navbar-toggler"
@@ -6089,7 +6094,13 @@
           <div class="col-lg-3 col-md-6">
             <div class="foot-logo">
               <a href="javascript:;">
-                <img src="assets/img/logo.png" class="img-fluid" alt="" />
+                <img
+                  src="assets/img/footer-logo.png"
+                  class="img-fluid"
+                  alt=""
+                  width="200"
+                  height="200"
+                />
                 <p>
                   Red Stone is an all in one web solution platform where you'll
                   find each fragment detailed with skills and pure talent.
