--- a/terms-and-condition.html
+++ b/terms-and-condition.html
@@ -175,7 +175,7 @@ html {
                 <li class="first">Dialing our Toll Free Number #  +1 909 307 4060</li>
                 <li><a class="link chat open_chat_btn" href="javascript:;">Live Chat</a>. Click here to start chat now
                 </li>
-                <li class="last">Sending us an <a class="link" href="cdn-cgi/l/email-protection#80f3e1ece5f3c0f7e5e2ece5edefeef3aee3efed">Email</a>.</li>
+                <li class="last">Sending us an <a class="link" href="tel:+1 909 307 4060">Email</a>.</li>
             </ul>
 
             <p>
