--- a/ssl.html
+++ b/ssl.html
@@ -25,7 +25,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="" content="" />
+  <meta name="title" content="Red Stone Design Master" />
 
 <meta name="description" content="Protect your digital data with the best SSL certificate provider. Red stone design master helps you in assuring your customers secure online transactions and data transfers." />
 
