--- a/website-development-services.html
+++ b/website-development-services.html
@@ -25,7 +25,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title> Acquire brand-new, holistic website development services with Red Stone Design Master!</title>
-  <meta name="google-site-verification" content="" />
+  <meta name="Title" content="Red Stone Design Master" />
   <meta name="description" content="Our professional web development services take what works and add a blend of creative spirit to everything we do. With us, you’ll find that the future of online web services is already here!" />
 
   <link href="unpkg.com/aos%402.3.1/dist/aos.css" rel="stylesheet">
