--- a/contact-us.html
+++ b/contact-us.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">
       (function () {
         window._insp = window._insp || [];
-        __insp.push(["wid", ]);
+        __insp.push(["wid"]);
         var ldinsp = function () {
           if (typeof window._inspld != "undefined") return;
           window._inspld = 1;
@@ -42,10 +42,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta
-      name="google-site-verification"
-      content=""
-    />
+    <meta name="Red Stone Desgin Master" content="Red Stone Design Master" />
     <link href="unpkg.com/aos%402.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
@@ -81,10 +78,7 @@
       }
     </style>
     <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src=""
-    ></script>
+    <script async src=""></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -147,9 +141,7 @@
                   Digital Marketing
                 </a>
                 <div class="dropdown-menu">
-                  <a
-                    class="dropdown-item"
-                    href="search-engine-optimization"
+                  <a class="dropdown-item" href="search-engine-optimization"
                     >SEO Marketing</a
                   >
                   <a class="dropdown-item" href="social-media-marketing"
@@ -281,7 +273,11 @@
           <div class="col-lg-3 col-md-6">
             <div class="foot-logo">
               <a href="javascript:;">
-                <img src="assets/img/footer-logo.png" class="img-fluid" alt="" />
+                <img
+                  src="assets/img/footer-logo.png"
+                  class="img-fluid"
+                  alt=""
+                />
                 <p>
                   Red Stone is an all in one web solution platform where you'll
                   find each fragment detailed with skills and pure talent.
@@ -301,9 +297,7 @@
               <h6>SERVICES</h6>
               <ul class="list-unstyled">
                 <li>
-                  <a href="website-development-services"
-                    >Website Development</a
-                  >
+                  <a href="website-development-services">Website Development</a>
                 </li>
                 <li><a href="website-hosting">Web Hosting</a></li>
                 <li><a href="domain-hosting">GET A FREE DOMAIN</a></li>
@@ -320,9 +314,7 @@
                   <a href="search-engine-optimization">SEO Marketing</a>
                 </li>
                 <li>
-                  <a href="social-media-marketing"
-                    >Social Media Marketing</a
-                  >
+                  <a href="social-media-marketing">Social Media Marketing</a>
                 </li>
                 <li><a href="contact-us">Contact us</a></li>
                 <li>
