--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -47,7 +47,7 @@
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-site-verification" content="" />
+    <meta name="title" content="Red Stone Design Master" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="unpkg.com/aos%402.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
