--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- Mirrored from webblers.co/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Dec 2024 09:34:19 GMT -->
 <meta
   name="description"
-  content="Transform your online presence with Red Stone, a leading professional web development agency, expert in crafting stunning websites for success."
+  content="Transform your online presence with Red Stone Design Master, a leading professional web development agency, expert in crafting stunning websites for success."
 />
 <html lang="en">
   <head>
@@ -65,7 +65,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="google-site-verification" content="" />
+    <meta name="title" content="Red Stone Design Master" />
     <link href="unpkg.com/aos%402.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
