--- a/terms-and-condition.html
+++ b/terms-and-condition.html
@@ -42,7 +42,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="" />
-    <meta name="google-site-verification" content="" />
+    <meta name="title" content="Red Stone Design Master" />
     <link href="unpkg.com/aos%402.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
@@ -769,5 +769,5 @@
     <script src="assets/js/custom5059.js?v=20"></script>
   </body>
 
-  <!-- Mirrored from webblers.co/terms-and-condition by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Dec 2024 09:37:22 GMT -->
+  
 </html>
