--- a/website-hosting.html
+++ b/website-hosting.html
@@ -49,8 +49,8 @@
       content="The Red stone design master suite offers website hosting services for your website for long-term, reliable server space that can keep you running and maintained."
     />
     <meta
-      name="google-site-verification"
-      content="mxxGF36UZHhTWghqr4-SKQJBz84v-IYnfdTR0IFdd50"
+      name="title"
+      content="Red Stone Design Master"
     />
     <link href="unpkg.com/aos%402.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
