--- a/cdn-cgi/l/email-protection.html
+++ b/cdn-cgi/l/email-protection.html
@@ -13,7 +13,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <meta name="robots" content="noindex, nofollow" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="stylesheet" id="cf_styles-css" href="https://webblers.co/cdn-cgi/styles/cf.errors.css" />
+<link rel="stylesheet" id="cf_styles-css" href="" />
 <!--[if lt IE 9]><link rel="stylesheet" id='cf_styles-ie-css' href="/cdn-cgi/styles/cf.errors.ie.css" /><![endif]-->
 <style>body{margin:0;padding:0}</style>
 
@@ -37,7 +37,7 @@
     <div id="cf-error-details" class="cf-error-details-wrapper">
       <div class="cf-wrapper cf-header cf-error-overview">
         <h1 data-translate="block_headline">Email Protection</h1>
-        <h2 class="cf-subheadline"><span data-translate="unable_to_access">You are unable to access this email address</span> webblers.co</h2>
+        <h2 class="cf-subheadline"><span data-translate="unable_to_access">You are unable to access this email address</span> redstone</h2>
       </div><!-- /.header -->
 
       <div class="cf-section cf-wrapper">
@@ -52,8 +52,8 @@
               <div class="rail">
                   <div class="panel">
                       <ul class="nobullets">
-                        <li><a rel="noopener noreferrer" class="modal-link-faq" href="https://support.cloudflare.com/hc/en-us/articles/200170016-What-is-Email-Address-Obfuscation-">How does Cloudflare protect email addresses on website from spammers?</a></li>
-                        <li><a rel="noopener noreferrer" class="modal-link-faq" href="https://support.cloudflare.com/hc/en-us/categories/200275218-Getting-Started">Can I sign up for Cloudflare?</a></li>
+                        <li><a rel="noopener noreferrer" class="modal-link-faq" href="">How does Cloudflare protect email addresses on website from spammers?</a></li>
+                        <li><a rel="noopener noreferrer" class="modal-link-faq" href="">Can I sign up for Cloudflare?</a></li>
                     </ul>
                 </div>
               </div>
